--- a/messenger-frontend/src/components/css/Error.css
+++ b/messenger-frontend/src/components/css/Error.css
@@ -8,7 +8,7 @@
 
     to {
         right: 20px;
-        bottom: 20px;
+        bottom: 12vh;
     }
 }
 
@@ -24,6 +24,7 @@
 
 #error-box {
     background-color: red;
+    z-index: 999;
     bottom: 0;
     right: 0;
     font-size: 16px;
