--- a/messenger-frontend/src/components/css/Home.css
+++ b/messenger-frontend/src/components/css/Home.css
@@ -115,6 +115,14 @@
     margin-top: 3px;
 }
 
+#friend-req-notifs {
+    background-color: red;
+    border-radius: 50%;
+    padding: 0px 5px 0px 5px;
+    position: absolute;
+    margin: -0.7rem 0px 0px 27%;
+}
+
 #tab-btn {
     width: 110px;
     margin: 0px 10px 5px 0px;
