--- a/messenger-frontend/src/components/css/Home.css
+++ b/messenger-frontend/src/components/css/Home.css
@@ -120,7 +120,7 @@
     border-radius: 50%;
     padding: 0px 5px 0px 5px;
     position: absolute;
-    margin: -0.7rem 0px 0px 27%;
+    margin: -0.7rem 0px 0px 15.5rem;
 }
 
 #tab-btn {
